--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,7 @@
-[[the-complete-lojban-language-日本語抄訳プロジェクト]]
-The Complete Lojban Language 日本語抄訳プロジェクト
----------------------------------------------------
+== The Complete Lojban Language 日本語抄訳プロジェクト
+
 
 http://ponjbogri.github.com/cll-ja/[web]
 
-詳しくはhttp://www.lojban.org/tiki/The+Complete+Lojban+Language+日本語抄訳[lojban.org
+詳しくはlink:http://www.lojban.org/tiki/The%20Complete%20Lojban%20Language%20%E6%97%A5%E6%9C%AC%E8%AA%9E%E6%8A%84%E8%A8%B3[lojban.org
 上のページ]をご覧ください。
